<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SkreenAppActivity"
    android:layout_margin="@dimen/activity_layout_margin">
    
    <LinearLayout android:id="@+id/linearLayout2" 
        android:layout_height="match_parent" 
        android:orientation="vertical"
        android:gravity="center" 
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/skreen_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/green_color"
            android:textSize="@dimen/title_text_size"
            android:gravity="center"/>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="@dimen/info_text_size"
            android:gravity="center"
            android:linksClickable="true"
            android:autoLink="web"/>
                
	    <Button
	        android:id="@+id/share_my_skreen_btn"
	        android:layout_margin="25dp"
	        android:text="@string/share_skreen" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"            
	        style="@style/btnStyleBlue"/>
	
	    <Button
	        android:id="@+id/view_skreen_btn"
	        android:layout_margin="25dp"
	        android:text="@string/view_skreen"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"            
	        style="@style/btnStyleBlue"/>

	    <TextView
	        android:id="@+id/disclaimner_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/app_disclaimner"
	        android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center"/>
	    
    </LinearLayout>
</LinearLayout>